hphp/hack/test/typecheck/references/strict_foreach_reference2.php.exp
File "strict_foreach_reference2.php", line 4, characters 26-28:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
