hphp/hack/test/typecheck/references/strict_foreach_reference2.php
<?hh // strict

function test(array<int> $arr): void {
  foreach ($arr as $_ => &$x) {
    $x = 0;
  }
}
